CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@

Changes in version 3.15
 Features
  * add restrict dataset processing
 Libraries
  * add casclient-2.1.1
  * upgrade commons libraries: fileupload-1.1.1, httpclient.3.0.1, io-1.2, logging-1.1
  * asssume jdk1.5, dont need xerces.jar or xml-api.jar anymore
 Bugs
  * NetcdfServlet: use Content-Disposition header (attachment; filename=filename) instead of always appending ".nc"

Changes in version 3.14
 Bugs
  * InvDataset copy constructor wasnt making copies - dup metadata in InvDatasetFmrc
  * Upgrade ADN/DIF records to latest version
  * MetadataExtractor was assuming that theres alwasys a fileFormat element in the catalog
  * CrawlDataset needs to get ProxyDataset from catref
  * HtmlWriter was not handling remote catalogs with reletive catrefs
  * NetcdfServer failing on non-fmrc datasets, due to urlPath not relative.
  * Use of CrawlableDatasetDods in datasetScan failing. Update TDS to use
    CrawlableDataset interface to find parent dataset and compare paths
    instead of string manipulation on datasetScan@location string.
 Libraries
  * grib-5.0.04

Changes in version 3.13
 Features
  * add Aggregation.setTypicalDataset = random, latest, or penultimate
  * allow tdr dynamic catalogs
  * add content/public for publically available data
  * move initialContent to WEB-INF so not visible
  * move idd/modelInventory directory to inside webapps: rootPath/idd/modelInventory/
  * WCS has its own working directory
  * threddsConfig.xml now has all user-settable parameters
  * check for duplicate ids in catalogs
  * dynamic class loading parameters in threddsConfig.xml
  * debug/reinit also rereads in threddsConfig.xml
  * params.xml, extraCatalogs.txt is now threddsConfig.xml
  * rearrange log files: cataloggen, catalogErrors, cache messages to separate files
  * add folder icons
  * Forecast Model Run Collections : InvDatasetFmrc.
  * WCS logs have length